@@ -25,23 +25,6 @@ void CGUIWindowVideoOverlay::Render()
 {
   if (!g_application.m_pPlayer) return ;
   if (!g_application.m_pPlayer->HasVideo()) return ;
-
-  /* TODO - Move this code to Application::Render() */
-  __int64 lPTS = g_application.m_pPlayer->GetTime() / 100;
-  int hh = (int)(lPTS / 36000) % 100;
-  int mm = (int)((lPTS / 600) % 60);
-  int ss = (int)((lPTS / 10) % 60);
-  int iSpeed = g_application.GetPlaySpeed();
-  if (hh == 0 && mm == 0 && ss < 5)
-  {
-    if (iSpeed < 1)
-    {
-      iSpeed = 1;
-      g_application.SetPlaySpeed(iSpeed);
-      g_application.m_pPlayer->SeekTime(0);
-    }
-  }
-
   CGUIWindow::Render();
 }
 
